completed php-doc for accounts
